--- a/index.html
+++ b/index.html
@@ -1,55 +1,66 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Prayer Tracker</title>
-<link rel='stylesheet' href='style.css'>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div id="signup" class="screen active">
   <h1>Welcome</h1>
   <input id="username" placeholder="Username *">
-  <input id="bio" placeholder="Bio (optional)">
-  <button onclick="completeSignup()">Continue</button>
+  <textarea id="bio" placeholder="Bio (optional)"></textarea>
+  <input type="file" id="pfp">
+  <button onclick="completeSignup()">Enter</button>
 </div>
 
-<div id="home" class="screen">
-  <h1 id="hi"></h1>
-  <div id="streak"></div>
+<div id="app" class="screen">
+  <header>
+    <h1 id="hi"></h1>
+    <div id="location"></div>
+    <div id="streak"></div>
+  </header>
+
+  <div id="sky"></div>
+
   <div class="card">
     <h2>Today's Prayers</h2>
-    <div id="prayers"></div>
+    <div class="pray"><label>Fajr</label><input type="checkbox" data-p="Fajr"></div>
+    <div class="pray"><label>Dhuhr</label><input type="checkbox" data-p="Dhuhr"></div>
+    <div class="pray"><label>Asr</label><input type="checkbox" data-p="Asr"></div>
+    <div class="pray"><label>Maghrib</label><input type="checkbox" data-p="Maghrib"></div>
+    <div class="pray"><label>Isha</label><input type="checkbox" data-p="Isha"></div>
   </div>
-</div>
 
-<div id="calendar" class="screen">
-  <h1>Calendar</h1>
-  <div id="calendarGrid"></div>
-</div>
+  <div id="calendar" class="card hidden">
+    <h2>Calendar</h2>
+    <div id="grid"></div>
+  </div>
 
-<div id="settings" class="screen">
-  <h1>Profile</h1>
-  <input id="nameEdit">
-  <button onclick="openModal()">Sign out</button>
+  <div id="settings" class="card hidden">
+    <h2>Settings</h2>
+    <input id="nameEdit">
+    <textarea id="bioEdit"></textarea>
+    <button onclick="openModal()">Sign out</button>
+  </div>
+
+  <nav>
+    <button onclick="show('home')">Home</button>
+    <button onclick="show('calendar')">Calendar</button>
+    <button onclick="show('settings')">Settings</button>
+  </nav>
 </div>
 
 <div id="modal" class="hidden">
-  <div class="modalBox">
-    <h2>Sign out?</h2>
+  <div class="modal">
+    <h3>Sign out?</h3>
     <p>This will erase all data.</p>
     <button onclick="signOut()">Yes</button>
     <button onclick="closeModal()">Cancel</button>
   </div>
 </div>
-
-<nav>
-  <button onclick="show('home')">Home</button>
-  <button onclick="show('calendar')">Calendar</button>
-  <button onclick="show('settings')">Settings</button>
-</nav>
 
 <script src="app.js"></script>
 </body>
