--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Prayer Tracker</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -15,46 +15,59 @@
 </div>
 
 <div id="app" class="screen">
-  <header>
-    <div>
-      <h2 id="greeting"></h2>
-      <p id="time"></p>
-      <p id="location">Locating…</p>
-      <p id="count"></p>
-    </div>
-    <div id="moon"></div>
-  </header>
+<header>
+  <div>
+    <h2 id="greeting"></h2>
+    <p id="time"></p>
+    <p id="location">Locating…</p>
+    <p id="count"></p>
+  </div>
+  <div id="moon"></div>
+</header>
 
-  <main id="home" class="page">
-    <div class="card">
-      <h3>Today's Prayers</h3>
-      <div class="pray" data-p="Fajr"><span>Fajr</span><div class="check"></div></div>
-      <div class="pray" data-p="Dhuhr"><span>Dhuhr</span><div class="check"></div></div>
-      <div class="pray" data-p="Asr"><span>Asr</span><div class="check"></div></div>
-      <div class="pray" data-p="Maghrib"><span>Maghrib</span><div class="check"></div></div>
-      <div class="pray" data-p="Isha"><span>Isha</span><div class="check"></div></div>
-    </div>
-  </main>
+<main id="home" class="page">
+  <div class="card">
+    <h3>Today's Prayers</h3>
+    <div class="pray" data-p="Fajr"><span>Fajr</span><span class="pt"></span><div class="check"></div></div>
+    <div class="pray" data-p="Dhuhr"><span>Dhuhr</span><span class="pt"></span><div class="check"></div></div>
+    <div class="pray" data-p="Asr"><span>Asr</span><span class="pt"></span><div class="check"></div></div>
+    <div class="pray" data-p="Maghrib"><span>Maghrib</span><span class="pt"></span><div class="check"></div></div>
+    <div class="pray" data-p="Isha"><span>Isha</span><span class="pt"></span><div class="check"></div></div>
+  </div>
+</main>
 
-  <main id="calendar" class="page">
-    <div class="card">
-      <h3>Calendar</h3>
-      <div id="calendarGrid"></div>
-    </div>
-  </main>
+<main id="calendar" class="page">
+  <div class="card">
+    <h3>Calendar</h3>
+    <div id="calendarGrid"></div>
+  </div>
+</main>
 
-  <main id="settings" class="page">
-    <div class="card">
-      <h3>Settings</h3>
-      <button onclick="signOut()" class="danger">Sign out</button>
-    </div>
-  </main>
+<main id="settings" class="page">
+  <div class="card">
+    <h3>Settings</h3>
+    <select id="method" onchange="calcTimes()">
+      <option value="MWL">MWL</option>
+      <option value="UQ">Umm al-Qura</option>
+    </select>
+    <button class="danger" onclick="openModal()">Sign out</button>
+  </div>
+</main>
 
-  <nav>
-    <button data-page="home">Home</button>
-    <button data-page="calendar">Calendar</button>
-    <button data-page="settings">Settings</button>
-  </nav>
+<nav>
+  <button data-page="home">Home</button>
+  <button data-page="calendar">Calendar</button>
+  <button data-page="settings">Settings</button>
+</nav>
+</div>
+
+<div id="modal" class="hidden">
+  <div class="modal">
+    <h3>Sign out?</h3>
+    <p>All data will be erased.</p>
+    <button class="danger" onclick="signOut()">Yes</button>
+    <button onclick="closeModal()">Cancel</button>
+  </div>
 </div>
 
 <script src="app.js"></script>
